[Improvement] Clear the alarm log when starting the relevant service (#2453)
* [Improvement] Clear the alarm service when the service starts.

Signed-off-by: yl09099 <yl09099@apache.org>